final change in security